--- a/res/layout/recents_task_view.xml
+++ b/res/layout/recents_task_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.miui.home.recents.views.TaskView
+    android:background="#00ffffff"
     android:focusable="true"
     android:layout_width="200.0dip"
     android:layout_height="200.0dip"
@@ -9,7 +10,9 @@
     <com.miui.home.recents.views.TaskViewThumbnail
         android:id="@id/task_view_thumbnail"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:elevation="57.0dip"
+        android:outlineProvider="bounds" />
     <LinearLayout
         android:layout_gravity="center"
         android:orientation="vertical"
