--- a/res/values/ids.xml
+++ b/res/values/ids.xml
@@ -807,4 +807,5 @@
     <item type="id" name="year" />
     <item type="id" name="zero_corner_chip" />
     <item type="id" name="zero_state_icon" />
+    <item type="id" name="title_center" />
 </resources>
