--- a/res/xml/navigation_bar_type_settings.xml
+++ b/res/xml/navigation_bar_type_settings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen android:title="@string/navigation_type_title"
   xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:miuisettings="http://schemas.android.com/apk/miuisettings">
+  xmlns:app="http://schemas.android.com/apk/miuisettings">
     <PreferenceCategory android:title="@string/navigation_type_title">
         <com.miui.home.recents.settings.NavBarTypeContainerPreference android:key="nav_bar_type_container_preference" />
     </PreferenceCategory>
@@ -16,11 +16,15 @@
         <com.miui.home.settings.preference.ValuePreference android:title="@string/auto_disable_screenbuttons_title" android:key="audo_disable_screen_buttons" android:summary="@string/auto_disable_screenbuttons_summary" />
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/navigation_guide_settings" android:key="navigation_guide_category">
-        <Preference android:icon="@drawable/navigation_bar_guide_home_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_home_title" android:key="navigation_guide_home" android:summary="@string/navigation_guide_home_summary" miuisettings:showIcon="true" />
-        <Preference android:icon="@drawable/navigation_bar_guide_recent_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_recent_title" android:key="navigation_guide_recent" android:summary="@string/navigation_guide_recent_summary" miuisettings:showIcon="true" />
-        <Preference android:icon="@drawable/navigation_bar_guide_back_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_back_title" android:key="navigation_guide_back" android:summary="@string/navigation_guide_back_summary" miuisettings:showIcon="true" />
-        <Preference android:icon="@drawable/navigation_bar_guide_app_menu_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_title" android:key="navigation_guide_app_menu" android:summary="@string/navigation_guide_app_summary" miuisettings:showIcon="true" />
-        <Preference android:icon="@drawable/navigation_bar_guide_appswitch" android:layout="@layout/navigation_guide_item_without_arrow" android:title="@string/navigation_guide_appswitch_title" android:key="navigation_guide_appswitch" android:summary="@string/navigation_guide_appswitch_summary" miuisettings:showIcon="true" />
-        <Preference android:icon="@drawable/navigation_bar_guide_app_quick_switch_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_quick_switch_title" android:key="navigation_guide_app_quick_switch" android:summary="@string/navigation_guide_app_quick_switch_summary" miuisettings:showIcon="true" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_home_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_home_title" android:key="navigation_guide_home" android:summary="@string/navigation_guide_home_summary" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_recent_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_recent_title" android:key="navigation_guide_recent" android:summary="@string/navigation_guide_recent_summary" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_back_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_back_title" android:key="navigation_guide_back" android:summary="@string/navigation_guide_back_summary" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_app_menu_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_title" android:key="navigation_guide_app_menu" android:summary="@string/navigation_guide_app_summary" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_appswitch" android:layout="@layout/navigation_guide_item_without_arrow" android:title="@string/navigation_guide_appswitch_title" android:key="navigation_guide_appswitch" android:summary="@string/navigation_guide_appswitch_summary" />
+        <Preference app:showIcon="true" android:icon="@drawable/navigation_bar_guide_app_quick_switch_without_gs_line" android:layout="@layout/navigation_guide_item" android:title="@string/navigation_guide_app_quick_switch_title" android:key="navigation_guide_app_quick_switch" android:summary="@string/navigation_guide_app_quick_switch_summary" />
     </PreferenceCategory>
+    <PreferenceCategory android:title="归功于" />
+    <Preference android:title="🅺🅰🆂🅷🅸" android:summary="主要用户界面和模块">
+        <intent android:action="android.intent.action.VIEW" android:data="" />
+    </Preference>
 </PreferenceScreen>
